istioctl/pkg/writer/envoy/configdump/testdata/routes/k8s-gateway-http-route-path-prefix/output.txt
NAME        VHOST NAME                 DOMAINS                 MATCH                  VIRTUAL SERVICE
http.80     httpbin.example.com:80     httpbin.example.com     PathPrefix:/get        http-0-istio-autogenerated-k8s-gateway.default
            backend                    *                       /healthz/ready*        
            backend                    *                       /stats/prometheus*
